--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: trip
 Type: Package
 Title: Spatial analysis of animal track data
-Version: 0.0.9
+Version: 1.0-3
 Depends: methods, sp, rgdal
 Author: Michael D. Sumner
 Maintainer: Michael D. Sumner <mdsumner@utas.edu.au>
 Description: Functions for accessing and manipulating spatial data for animal tracking.
    Filter for speed and create time spent plots from animal track data.
 License: GPL2
-Packaged: Fri Nov 17 15:18:34 2006; mdsumner
+Packaged: Fri Mar 16 10:09:41 2007; mdsumner
