--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,15 @@
 Package: trip
 Type: Package
 Title: Spatial analysis of animal track data
-Version: 1.1-6
+Version: 1.1-8
 Depends: methods, sp (>= 0.9-64)
-Suggests: spatstat (>= 1.18-4), maptools
+Suggests: spatstat (>= 1.18-4), maptools, rgdal, adehabitat, lattice
 Author: Michael D. Sumner
 Maintainer: Michael D. Sumner <mdsumner@utas.edu.au>
 Description: Functions for accessing and manipulating spatial data for
         animal tracking. Filter for speed and create time spent plots
         from animal track data.
 License: GPL (>= 2)
-Packaged: 2010-06-02 19:04:41 UTC; mdsumner
+Packaged: 2010-09-27 13:55:28 UTC; mdsumner
 Repository: CRAN
-Date/Publication: 2010-06-03 13:49:43
+Date/Publication: 2010-09-27 14:42:47
