--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,19 +1,23 @@
 Package: trip
 Type: Package
 Title: Spatial analysis of animal track data
-Version: 1.1-12
+Authors@R: c(person("Michael", "Sumner", role = c("aut", "cre"), email
+        = "mdsumner@gmail.com"), person("Sebastian", "Luque", role =
+        "ctb", email = "spluque@gmail.com"))
+Version: 1.1-14
 Depends: methods, sp (>= 0.9-64), spatstat (>= 1.18-4)
-Imports: maptools
-Suggests: rgdal, adehabitatLT, lattice
-Author: Michael D. Sumner
-Maintainer: Michael D. Sumner <mdsumner@utas.edu.au>
+Imports: maptools, sp
+Suggests: adehabitatLT, lattice
+Author: Michael Sumner[aut, cre], Sebastian Luque [ctb]
+Maintainer: Michael D. Sumner <mdsumner@gmail.com>
 Description: Functions for accessing and manipulating spatial data for
         animal tracking.  Filter for speed and create time spent plots
         from animal track data.
+Collate: AllClass.R AllGenerics.R AllMethod.R trip.R trip.split.R
+        trip2other.R tripGrid.R trackDistance.R filter.penSS.R
+        oc.theme.R readDiag.R speedfilter.R
 License: GPL (>= 2)
+Packaged: 2013-05-14 11:41:09 UTC; mdsumner
+NeedsCompilation: no
 Repository: CRAN
-Repository/R-Forge/Project: trip
-Repository/R-Forge/Revision: 44
-Repository/R-Forge/DateTimeStamp: 2012-10-31 10:48:37
-Date/Publication: 2012-11-06 07:11:16
-Packaged: 2012-10-31 11:24:19 UTC; rforge
+Date/Publication: 2013-05-16 10:56:50
