--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Title: Spatial analysis of animal track data
 Authors@R: c(person("Michael", "Sumner", role = c("aut", "cre"), email
         = "mdsumner@gmail.com"), person("Sebastian", "Luque", role =
         "ctb", email = "spluque@gmail.com"))
-Version: 1.1-14
+Version: 1.1-15
 Depends: methods, sp (>= 0.9-64), spatstat (>= 1.18-4)
 Imports: maptools, sp
 Suggests: adehabitatLT, lattice
@@ -17,7 +17,7 @@ Collate: AllClass.R AllGenerics.R AllMethod.R trip.R trip.split.R
         trip2other.R tripGrid.R trackDistance.R filter.penSS.R
         oc.theme.R readDiag.R speedfilter.R
 License: GPL (>= 2)
-Packaged: 2013-05-14 11:41:09 UTC; mdsumner
+Packaged: 2013-06-18 05:28:53 UTC; michae_sum
 NeedsCompilation: no
 Repository: CRAN
-Date/Publication: 2013-05-16 10:56:50
+Date/Publication: 2013-06-18 08:16:09
