--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,49 +1,57 @@
-# $Id: NAMESPACE 110 2013-03-28 03:13:38Z sluque $
-
-# Import all packages listed as Imports or Depends
-import(
-  methods,
-  sp,
-  spatstat
-)
-
-importClassesFrom(maptools,
-                  ppp, psp, owin)
-
-## does this mean require(spatstat) not needed in as.ppp.trip?
-importFrom(maptools, as.ppp.SpatialPointsDataFrame)
-
-## to fix tripRbind: no visible global function definition for 'spRbind'
-importFrom(maptools, spRbind)
-##importFrom(maptools, trackAzimuth)
-
-## Export all names not starting with a dot
-exportPattern("^[^\\.]")
-
-exportClassPattern("^$")               # to over-ride classes implied above
-
-exportClasses("TimeOrderedRecords",
-              "trip")
-
-exportMethods("trip",
-              "as.trip",
-              "points",
-              "text",
-              "lines",
-              "plot",
-              "show",
-              "subset",
-              "summary",
-              "show",
-              "recenter")
-
-S3method("print", "trip")
-S3method("print", "summary.TORdata")
-S3method("dim", "trip")
-S3method("names", "trip")
-S3method("names<-", "trip")
-S3method("as.data.frame", "trip")
-S3method("as.ppp", "trip")
-S3method("as.psp", "trip")
-## S3method("as.ltraj", "trip")
-S3method("cut", "trip")
+export(adjust.duplicateTimes)
+export(argos.sigma)
+export(as.ltraj.trip)
+export(as.SpatialLinesDataFrame.trip)
+export(as.trip.SpatialLinesDataFrame)
+export(cut.trip)
+export(explode)
+export(filter.penSS)
+export(forceCompliance)
+export(getTimeID)
+export(getTORnames)
+export(ltraj2trip)
+export(makeGridTopology)
+export(oc.colors)
+export(oc.theme)
+export(readArgos)
+export(readDiag)
+export(sepIdGaps)
+export(speedfilter)
+export(TimeOrderedRecords)
+export(trackAngle)
+export(trackAngle.trip)
+export(trackDistance)
+export(trackDistance.default)
+export(trackDistance.trip)
+export(trip.split.exact)
+export(tripGrid)
+export(tripGrid.interp)
+export(tripTransform)
+exportClasses(TimeOrderedRecords)
+exportClasses(trip)
+exportMethods(as.trip)
+exportMethods(lines)
+exportMethods(plot)
+exportMethods(show)
+exportMethods(subset)
+exportMethods(summary)
+exportMethods(trip)
+import(sp)
+importFrom(maptools,as.ppp.SpatialPointsDataFrame)
+importFrom(maptools,spRbind)
+importFrom(MASS,bandwidth.nrd)
+importFrom(spatstat,"[.psp")
+importFrom(spatstat,as.ppp)
+importFrom(spatstat,as.psp)
+importFrom(spatstat,density.ppp)
+importFrom(spatstat,density.psp)
+importFrom(spatstat,lengths.psp)
+importFrom(spatstat,owin)
+importFrom(spatstat,pixellate)
+importFrom(spatstat,pixellate.psp)
+importFrom(spatstat,ppp)
+importFrom(spatstat,psp)
+S3method(as.ppp,trip)
+S3method(as.psp,trip)
+S3method(cut,trip)
+S3method(print,summary.TORdata)
