--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,7 +19,6 @@ export(sepIdGaps)
 export(speedfilter)
 export(TimeOrderedRecords)
 export(trackAngle)
-export(trackAngle.trip)
 export(trackDistance)
 export(trackDistance.default)
 export(trackDistance.trip)
@@ -36,6 +35,7 @@ exportMethods(show)
 exportMethods(subset)
 exportMethods(summary)
 exportMethods(trip)
+import(methods)
 import(sp)
 importFrom(maptools,as.ppp.SpatialPointsDataFrame)
 importFrom(maptools,spRbind)
@@ -55,3 +55,5 @@ S3method(as.ppp,trip)
 S3method(as.psp,trip)
 S3method(cut,trip)
 S3method(print,summary.TORdata)
+S3method(trackAngle,default)
+S3method(trackAngle,trip)
