--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,21 +5,19 @@ Authors@R: c(person("Michael D.","Sumner", role = c("aut", "cre"),
     email = "mdsumner@gmail.com"),
     person("Sebastian", "Luque", role = "ctb",
     email = "spluque@gmail.com"))
-Maintainer: Michael D. Sumner <mdsumner@gmail.com>
-Version: 1.1-17
+Version: 1.1-18
 Depends: methods, sp
 Imports: maptools, MASS, spatstat
-Suggests: adehabitatLT
+Suggests: adehabitatLT, rgdal
 Description: Functions for accessing and manipulating spatial data for
     animal tracking.  Filter for speed and create time spent plots
     from animal track data.
 NeedsCompilation: no
 ByteCompile: yes
 License: GPL-3
-Collate: 'AllClass.R' 'AllMethod.R' 'trip.R' 'coerce.R' 'colours.R'
-        'filter.R' 'grid.R' 'trip-deprecated.R'
-Packaged: 2013-08-25 07:48:50 UTC; mdsumner
+Packaged: 2014-09-23 02:35:24 UTC; mdsumner
 Author: Michael D. Sumner [aut, cre],
   Sebastian Luque [ctb]
+Maintainer: Michael D. Sumner <mdsumner@gmail.com>
 Repository: CRAN
-Date/Publication: 2013-08-25 10:49:09
+Date/Publication: 2014-09-23 05:49:02
