--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: trip
 Type: Package
-Title: Spatial analysis of animal track data
+Title: Spatial Analysis of Animal Track Data
 Authors@R: c(person("Michael D.","Sumner", role = c("aut", "cre"),
     email = "mdsumner@gmail.com"),
     person("Sebastian", "Luque", role = "ctb",
     email = "spluque@gmail.com"))
-Version: 1.1-18
+Version: 1.1-19
 Depends: methods, sp
 Imports: maptools, MASS, spatstat
 Suggests: adehabitatLT, rgdal
@@ -15,9 +15,9 @@ Description: Functions for accessing and manipulating spatial data for
 NeedsCompilation: no
 ByteCompile: yes
 License: GPL-3
-Packaged: 2014-09-23 02:35:24 UTC; mdsumner
+Packaged: 2014-11-05 11:34:19 UTC; mdsumner
 Author: Michael D. Sumner [aut, cre],
   Sebastian Luque [ctb]
 Maintainer: Michael D. Sumner <mdsumner@gmail.com>
 Repository: CRAN
-Date/Publication: 2014-09-23 05:49:02
+Date/Publication: 2014-11-05 13:33:05
