--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,23 +1,24 @@
 Package: trip
 Type: Package
-Title: Spatial Analysis of Animal Track Data
+Title: Tools for the Analysis of Animal Track Data
 Authors@R: c(person("Michael D.","Sumner", role = c("aut", "cre"),
     email = "mdsumner@gmail.com"),
     person("Sebastian", "Luque", role = "ctb",
     email = "spluque@gmail.com"))
-Version: 1.1-19
+Version: 1.1-21
 Depends: methods, sp
-Imports: maptools, MASS, spatstat
-Suggests: adehabitatLT, rgdal
-Description: Functions for accessing and manipulating spatial data for
-    animal tracking.  Filter for speed and create time spent plots
-    from animal track data.
+Imports: maptools, MASS, raster, spatstat
+Suggests: adehabitatLT, knitr, rgdal
+Description: Functions for accessing and manipulating spatial data for animal
+    tracking, with straightforward coercion from and to other formats. Filter
+    for speed and create time spent maps from animal track data.
 NeedsCompilation: no
 ByteCompile: yes
 License: GPL-3
-Packaged: 2014-11-05 11:34:19 UTC; mdsumner
+VignetteBuilder: knitr
+Packaged: 2015-05-20 21:44:02 UTC; mdsumner
 Author: Michael D. Sumner [aut, cre],
   Sebastian Luque [ctb]
 Maintainer: Michael D. Sumner <mdsumner@gmail.com>
 Repository: CRAN
-Date/Publication: 2014-11-05 13:33:05
+Date/Publication: 2015-05-21 08:55:37
